# craveny

./: .env.example  .gitignore  AGENTS.md  PM2.md  README.md  RUN_GUIDE.md  ecosystem.config.js.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_prediction_result.json
.ai/: architecture-update-request.md
.bmad/: README.md
.bmad-core/: install-manifest.yaml
.bmad-ephemeral/: sprint-status.yaml
.claude/: development.md  settings.local.json
backend/: Dockerfile  config.py  main.py  scheduler.py
data/: stock_codes.json  target_stocks.json
docs/: API_MIGRATION_EPIC3.md  CRAWLING_STRATEGY.md  DASHBOARD_UX_DESIGN.md  KIS_API_MIGRATION_RESEARCH.md  MULTI_MODEL_DESIGN.md  MULTI_MODEL_IMPLEMENTATION.md  NEWS_COPYRIGHT_ANALYSIS.md  REDDIT_DESIGN_COMPARISON.md  REDDIT_INTEGRATION_DESIGN.md  REDDIT_INTEGRATION_SUMMARY.md  STOCK_ANALYSIS_REPORT_UPDATE_SYSTEM_ANALYSIS.md  TOKEN_ARCHITECTURE.md  api-contracts-backend.md  api-contracts-frontend.md  architecture-backend.md  architecture-frontend.md  architecture-infrastructure.md  architecture.md  bmm-workflow-status.yaml  brainstorming-session-results.md  component-inventory.md  comprehensive-analysis-backend.md  comprehensive-analysis-frontend.md  contribution-guidelines.md  data-models-backend.md  data-models-frontend.md  deployment-configuration.md  deployment-infrastructure.md  development-guide.md  epics.md  implementation-readiness-report-2025-11-11.md  index.md  integration-architecture.md  pm-checklist-results.md  prd.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md  sprint-change-proposal-2025-11-02.md  (+1 more)
frontend/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
infrastructure/: Dockerfile  docker-compose.yml
scripts/: add_admin_user.py  anomaly_report.md  apply_migration.py  backfill_current_prices.py  backfill_index_daily_prices.py  backfill_kis_daily_prices.py  backfill_market_data.py  backfill_overtime_prices.py  backfill_predictions.py  backfill_stock_prices.py  backup_predictions.py  check_dl_structure.py  (+103 more)
(+215 files in other folders)
